# browser_use_agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
browser-use/browser_use/agent/: service.py
rollout_visual/: kutils.py  utils.py
rollout_visual/dataset/multimodel_mind2web/: prompt_parser.py
rollout_visual/rollout/: browser_agent.py
src/: main_fastapi.py  server_logging.py
src/browser_use/: __init__.py
src/browser_use/api/: __init__.py  browser_fastapi.py
src/browser_use_v/: __init__.py
src/browser_use_v/api/: __init__.py  browser_fastapi.py
src/browser_use_v/utils/: oss_process.py  trace_processing.py
src/browser_use_v/visual/dataset/multimodel_mind2web/: prompt_parser.py
src/browser_use_v/visual/llm_service/: ais_qwen.py
src/browser_use_v/visual/rollout/: browser_agent.py
src/search/: metrics.py
src/search/api/: __init__.py  search_fastapi.py
src/search/models/: requests.py  responses.py  search.py
src/search/services/: content_fetcher.py  google_search.py  search_orchestrator.py
src/visual/dataset/: dataset_utils.py
src/visual/dataset/multimodel_mind2web/: infer_utils.py
src/visual/rollout/: browser_agent.py
