[project]
name = "browser-use-agent"
version = "0.1.0"
description = "Multi-service AI platform browser automation"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiofiles==24.1.0",
    "altair==5.5.0",
    "anthropic",
    "anyio==4.9.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.13.4",
    "certifi>=2024.8.30",
    "chardet>=5.2.0",
    "click==8.2.1",
    "fastapi==0.115.8",
    "google-api-python-client==2.175.0",
    "html2text>=2025.4.15",
    "httpx==0.28.1",
    "huggingface-hub==0.33.0",
    "jinja2==3.1.6",
    "kubernetes==32.0.1",
    "langchain==0.3.25",
    "langchain-anthropic",
    "langchain-core==0.3.64",
    "langchain-deepseek==0.1.3",
    "langchain-google-genai==2.1.5",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.3.21",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.45",
    "lxml==5.4.0",
    "markdown>=3.8.2",
    "mcp",
    "mem0ai==0.1.111",
    "numpy==2.3.1",
    "ollama==0.5.1",
    "openai",
    "oss2",
    "patchright==1.52.5",
    "pathvalidate>=3.3.1",
    "pdfminer-six",
    "pillow==10.4.0",
    "playwright==1.52.0",
    "puremagic>=1.30",
    "pydantic>=2.9.2",
    "pydantic-settings",
    "pytesseract>=0.3.13",
    "python-dotenv==1.0.1",
    "python-magic>=0.4.27",
    "requests==2.32.4",
    "smolagents>=1.19.0",
    "starlette",
    "streamlit==1.46.0",
    "tabulate",
    "tiktoken==0.9.0",
    "typer==0.16.0",
    "waybackpy>=3.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.11.2",
    "mypy>=1.8.0",
    "pre-commit>=4.2.0",
]

[project.scripts]
browser-fastapi = "src.main_fastapi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
    "src/**/*.py",
    "src/**/*.yml",
    "src/**/*.yaml",
    "src/**/*.json",
    "src/**/*.md",
]
exclude = [
    "src/**/__pycache__",
    "src/**/*.pyc",
    "src/**/.*",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
